--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -34,6 +34,9 @@
     {%- if settings.animations_reveal_on_scroll -%}
       <script src="{{ 'animations.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
+    <script src="{{ 'global-functions.js' | asset_url }}" defer="defer"></script>
+    {{ 'swiper.min.css' | asset_url | stylesheet_tag }}
+    <script src="{{ 'swiper.min.js' | asset_url }}" async></script>
 
     {{ content_for_header }}
 
