--- a/snippets/product-thumbnail.liquid
+++ b/snippets/product-thumbnail.liquid
@@ -51,11 +51,10 @@
 
 <div
   class="product-media-container media-type-{{ media.media_type }} media-fit-{{ media_fit }} global-media-settings gradient{% if constrain_to_viewport %} constrain-height{% endif %}"
-  style="--ratio: {{ media.aspect_ratio | default: 1.0 }}; --preview-ratio: {{ media.preview_image.aspect_ratio | default: 1.0 }};"
->
+  style="--ratio: 1.0; --preview-ratio: 1.0;"
+  >
   <noscript>
     {%- if media.media_type == 'video' or media.media_type == 'external_video' -%}
-      <span class="product__media-icon motion-reduce quick-add-hidden">{% render 'icon-play' %}</span>
       <div class="product__media media">
         {{ media.preview_image | image_url: width: 1946 | image_tag:
           loading: lazy,
@@ -77,34 +76,56 @@
     {%- endif -%}
   </noscript>
 
-  <modal-opener class="product__modal-opener product__modal-opener--{{ media.media_type }} no-js-hidden" data-modal="#ProductModal-{{ modal_id }}">
-    <span class="product__media-icon motion-reduce quick-add-hidden{% if media.media_type == 'image' %} product__media-icon--{{ section.settings.image_zoom }}{% endif %}" aria-hidden="true">
+  <div class="no-js-hidden">
+    <span class="{% if media.media_type != 'image' %} product__media-icon motion-reduce quick-add-hidden{% endif %}" aria-hidden="true">
       {%- liquid
         case media.media_type
         when 'video' or 'external_video'
           render 'icon-play'
         when 'model'
           render 'icon-3d-model'
-        else
-          render 'icon-zoom'
         endcase
       -%}
     </span>
-    {%- render 'loading-spinner' -%}
-    <div class="product__media media media--transparent">
-      {{ media.preview_image | image_url: width: 1946 | image_tag:
-        class: image_class,
-        loading: lazy,
-        sizes: sizes,
-        widths: '246, 493, 600, 713, 823, 990, 1100, 1206, 1346, 1426, 1646, 1946'
-      }}
+    <div class="loading-overlay__spinner hidden">
+      <svg
+        aria-hidden="true"
+        focusable="false"
+        class="spinner"
+        viewBox="0 0 66 66"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <circle class="path" fill="none" stroke-width="4" cx="33" cy="33" r="30"></circle>
+      </svg>
     </div>
-    <button class="product__media-toggle quick-add-hidden product__media-zoom-{{ section.settings.image_zoom }}" type="button" aria-haspopup="dialog" data-media-id="{{ media.id }}">
-      <span class="visually-hidden">
-        {{ 'products.product.media.open_media' | t: index: position }}
-      </span>
-    </button>
-  </modal-opener>
+    <div class="product__media media media--transparent pswp-gallery pswp-gallery--single-column" id="gallery--getting-started">
+      {% if media.media_type == 'image' and section.settings.image_zoom == "lightbox" %}
+        <a 
+          class="photoswipe__chidlren" href="{{ media | image_url }}" 
+          data-pswp-width="2500" 
+          data-pswp-height="2500" 
+          target="_blank"
+        >
+          {{ media.preview_image | image_url: width: 1946 | image_tag:
+            class: image_class,
+            loading: lazy,
+            sizes: sizes,
+            widths: '246, 493, 600, 713, 823, 990, 1100, 1206, 1346, 1426, 1646, 1946'
+          }}
+        </a>
+      {% else %}
+      <div class="photoswipe__chidlren">
+
+        {{ media.preview_image | image_url: width: 1946 | image_tag:
+          class: image_class,
+          loading: lazy,
+          sizes: sizes,
+          widths: '246, 493, 600, 713, 823, 990, 1100, 1206, 1346, 1426, 1646, 1946'
+        }}
+      </div>
+      {% endif %}
+    </div>
+  </div>
 
   {%- if media.media_type != 'image' -%}
     {%- if media.media_type == 'model' -%}
@@ -112,7 +133,7 @@
     {%- else -%}
       <deferred-media class="deferred-media media media--transparent no-js-hidden" data-media-id="{{ media.id }}">
     {%- endif -%}
-    <button id="Deferred-Poster-Modal-{{ media.id }}" class="deferred-media__poster" type="button">
+    <button id="Deferred-Poster-Modal-{{ section.id }}"  class="deferred-media__poster" type="button">
       <span class="deferred-media__poster-button motion-reduce">
         {%- if media.media_type == 'model' -%}
           <span class="visually-hidden">{{ 'products.product.media.play_model' | t }}</span>
