--- a/sections/featured-porduct-custom.liquid
+++ b/sections/featured-porduct-custom.liquid
@@ -195,14 +195,14 @@
      
       {
         "type": "buy_buttons",
-        "name": "t:sections.featured-product.blocks.buy_buttons.name",
+        "name": "t:sections.featured-product-custom.blocks.buy_buttons.name",
         "limit": 1,
         "settings": [
           {
             "type": "inline_richtext",
             "id": "free_shipping_text",
             "default": "Free shiping",
-            "label": "t:sections.featured-product.blocks.text.settings.text.label"
+            "label": "t:sections.featured-product-custom.blocks.buy_buttons.settings.free_shipping_text.label"
           }
         ]
       },
