Add text under button

--- a/sections/featured-porduct-custom.liquid
+++ b/sections/featured-porduct-custom.liquid
@@ -201,8 +201,19 @@
           {
             "type": "inline_richtext",
             "id": "free_shipping_text",
-            "default": "Free shiping",
+            "default": "Text above button",
             "label": "t:sections.featured-product-custom.blocks.buy_buttons.settings.free_shipping_text.label"
+          },
+          {
+            "type": "inline_richtext",
+            "id": "pay_text",
+            "default": "Text under button",
+            "label": "t:sections.featured-product-custom.blocks.buy_buttons.settings.pay_text.label"
+          },
+          {
+            "type": "image_picker",
+            "id": "pay_method_icon",
+            "label": "t:sections.featured-product-custom.blocks.buy_buttons.settings.pay_icon_method.label"
           }
         ]
       },
