--- a/assets/section-featured-product-custom.css
+++ b/assets/section-featured-product-custom.css
@@ -56,11 +56,13 @@
 }
 @media screen and (min-width: 768px) {
   .featured-product__custom-buttons {
-    align-items: flex-end;
+    align-items: center;
   }
+  .featured-product__custom-under-button,
   .featured-product__custom-free-shipping {
     max-width: 44rem;
   }
+
   .featured-product__custom-gallery {
     max-width: 75%;
     width: 100%;
@@ -113,7 +115,12 @@
     height: 100%;
   }
 }
-
+.featured-product__custom-under-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+}
 .featured-product__custom .product-form__submit {
   margin-bottom: 0;
 }
@@ -184,6 +191,9 @@
 
 .featured-product__custom-buy-button-wrapper {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
 }
 
 .featured-product__custom-buy-button {
@@ -230,7 +240,6 @@
   line-height: 1.8rem;
   text-transform: none;
   text-align: center;
-  margin-bottom: 0.8rem;
 }
 
 /* ASPECT RATIOS */
