--- a/snippets/buy-button.liquid
+++ b/snippets/buy-button.liquid
@@ -102,4 +102,8 @@
       </div>
     </div>
   {%- endif -%}
+  <div class="featured-product__custom-under-button">
+    <div class="featured-product__custom-free-shipping">{{ block.settings.pay_text }}</div>
+    <img width="59" height="14" src="{{ block.settings.pay_method_icon | img_url: width: auto }}" alt="{{ key }}" />
+  </div>
 </div>
